--- a/src/components/x/form.css
+++ b/src/components/x/form.css
@@ -1,15 +1,17 @@
 /*---------------------------
-forms.css
-auto
+form.css
+x
 
-Created by andreyshpigunov on 25.05.2021.
+Created by Andrey Shpigunov on 08.09.2024.
 ---------------------------*/
 
-/* Default form elements styles */
+
+/* Form default styles */
 
 :root {
     --forms-width: 400px;
-    --forms-padding: .5rem .6rem;
+    --forms-height: 38px;
+    --forms-side-padding: 10px;
     
     --forms-font-size: var(--font-size);
     --forms-font-color: #000;
@@ -18,7 +20,7 @@ Created by andreyshpigunov on 25.05.2021.
     --forms-font-color-placeholder: #ccc;
     
     --forms-border-width: 1px;
-    --forms-border-radius: 4px;
+    --forms-border-radius: 6px;
     --forms-border-color: #ddd;
     --forms-border-color-focused: #8cf;
     --forms-border-color-error: #f00;
@@ -26,16 +28,8 @@ Created by andreyshpigunov on 25.05.2021.
     --forms-border-color-disabled: #ddd;
     
     --forms-background-color: #fff;
-    --forms-background-color-readonly: #f8f8f8;
+    --forms-background-color-readonly: #fafafa;
     --forms-background-color-disabled: #f6f6f6;
-}
-
-input, textarea,
-select, button {
-    max-width: 100%;
-    font-family: inherit;
-    box-sizing: border-box;
-    box-shadow: none;
 }
 
 input[type=color],
@@ -51,11 +45,13 @@ input[type=text],
 input[type=time],
 input[type=url],
 input[type=week],
+input:not([type]),
 textarea {
     position: relative;
-    width: var(--forms-width);
+    width: 100%;
+    height: var(--forms-height);
     margin: 0;
-    padding: var(--forms-padding);
+    padding: 0 var(--forms-side-padding);
     font-size: var(--forms-font-size);
     color: var(--forms-font-color);
     outline: none;
@@ -91,6 +87,7 @@ input[type=text],
 input[type=time],
 input[type=url],
 input[type=week],
+input:not([type]),
 textarea,
 select {
     background-color: var(--forms-background-color);
@@ -121,4 +118,18 @@ input::-moz-placeholder,
 input:-moz-placeholder,
 input:-ms-input-placeholder {
     text-overflow: ellipsis;
+}
+
+input, textarea,
+select, button {
+    max-width: var(--forms-width);
+    font-family: inherit;
+    box-sizing: border-box;
+    box-shadow: none;
+}
+
+textarea {
+    height: auto;
+    padding-top: calc(var(--forms-side-padding) / 2);
+    padding-bottom: calc(var(--forms-side-padding) / 2);
 }
