--- a/src/components/x/debug.css
+++ b/src/components/x/debug.css
@@ -1,12 +1,12 @@
 /*---------------------------
 debug.css
-auto
+x
 
-Created by andreyshpigunov on 25.05.2021.
+Created by Andrey Shpigunov on 08.09.2024.
 ---------------------------*/
 
 
-/* CMS debugger styles */
+/* CMS debugger style */
 
 .debug-info {
     position: fixed;
@@ -16,15 +16,14 @@ Created by andreyshpigunov on 25.05.2021.
     width: 100%;
     height: 100%;
     padding: 4vw;
-    background: rgba(0,0,0,.9);
+    background: #00000022;
     overflow: auto;
     -webkit-overflow-scrolling: touch;
-    -ms-overflow-style: -ms-autohiding-scrollbar;
     overscroll-behavior: contain;
     
     & * {
         font-family: var(--font-family-mono, monospace);
-        font-size: .8rem;
+        font-size: 14px;
         color: #fff;
     }
     
