--- a/src/components/x/flow.css
+++ b/src/components/x/flow.css
@@ -1,8 +1,8 @@
 /*---------------------------
 flow.css
-auto-x
+x
 
-Created by Andrey Shpigunov on 03.09.2024.
+Created by Andrey Shpigunov on 08.09.2024.
 ---------------------------*/
 
 
@@ -13,26 +13,24 @@ Created by Andrey Shpigunov on 03.09.2024.
     & > * { margin: 0 }
     
     @for $i from 0 to 10 {
-        & .s$(i) > * {
+        &.s$(i) > * {
             margin-top: var(--space-$(i));
         }
     }
     
     & > *:first-child { margin-top: 0 }
     
-    @media(max-width: 1023px){
-        
+    @media(--medium){
         @for $i from 0 to 10 {
-            & .md\:s$(i) > * {
+            &.md\:s$(i) > * {
                 margin-top: var(--space-$(i));
             }
         }
     }
     
-    @media(max-width: 639px){
-        
+    @media(--small){
         @for $i from 0 to 10 {
-            & .sm\:s$(i) > * {
+            &.sm\:s$(i) > * {
                 margin-top: var(--space-$(i));
             }
         }
