--- a/src/components/x/sheets.css
+++ b/src/components/x/sheets.css
@@ -1,9 +1,10 @@
 /*---------------------------
 sheets.css
-auto
+x
 
-Created by andreyshpigunov on 14.04.2022.
+Created by Andrey Shpigunov on 07.09.2024.
 ---------------------------*/
+
 
 /* Sheets */
 
