--- a/src/components/x/buttons.css
+++ b/src/components/x/buttons.css
@@ -34,8 +34,7 @@ Created by Andrey Shpigunov on 08.09.2024.
     --button-font-color-active: var(--button-font-color);
 }
 
-.button, a.button,
-button, [type=submit] {
+.button, button, [type=submit] {
     position: relative;
     display: inline-flex;
     align-items: center;
