--- a/src/components/x/helpers.css
+++ b/src/components/x/helpers.css
@@ -108,8 +108,6 @@ Created by Andrey Shpigunov on 08.09.2024.
 @for $i from 0 to 10 {
     .t$(i) { top: var(--space-$(i)) !important; }
     .b$(i) { bottom: var(--space-$(i)) !important; }
-    .l$(i) { left: var(--space-$(i)) !important; }
-    .r$(i) { right: var(--space-$(i)) !important; }
     .z$(i) { z-index: var(--space-$(i)) !important; }
 }
 
@@ -120,8 +118,6 @@ Created by Andrey Shpigunov on 08.09.2024.
     @for $i from 0 to 10 {
         .lg\:t$(i) { top: var(--space-$(i)) !important; }
         .lg\:b$(i) { bottom: var(--space-$(i)) !important; }
-        .lg\:l$(i) { left: var(--space-$(i)) !important; }
-        .lg\:r$(i) { right: var(--space-$(i)) !important; }
         .lg\:z$(i) { z-index: var(--space-$(i)) !important; }
     }
 }
@@ -131,19 +127,15 @@ Created by Andrey Shpigunov on 08.09.2024.
     @for $i from 0 to 10 {
         .md\:t$(i) { top: var(--space-$(i)) !important; }
         .md\:b$(i) { bottom: var(--space-$(i)) !important; }
-        .md\:l$(i) { left: var(--space-$(i)) !important; }
-        .md\:r$(i) { right: var(--space-$(i)) !important; }
         .md\:z$(i) { z-index: var(--space-$(i)) !important; }
     }
 }
-@media (max-width: 639px) {
+@media (--small) {
     .sm\:sticky { position: sticky !important; top: 0 }
     
     @for $i from 0 to 10 {
         .sm\:t$(i) { top: var(--space-$(i)) !important; }
         .sm\:b$(i) { bottom: var(--space-$(i)) !important; }
-        .sm\:l$(i) { left: var(--space-$(i)) !important; }
-        .sm\:r$(i) { right: var(--space-$(i)) !important; }
         .sm\:z$(i) { z-index: var(--space-$(i)) !important; }
     }
 }
