--- a/src/components/x/modal.css
+++ b/src/components/x/modal.css
@@ -1,13 +1,16 @@
 /*---------------------------
 modal.css
-auto
+x
 
-Created by andreyshpigunov on 25.05.2021.
+Created by Andrey Shpigunov on 18.09.2024.
 ---------------------------*/
+
 
 /* Modal windows */
 
 :root {
+    --modal-outer-padding: 50px;
+    --modal-outer-padding-small: 10px;
     --modal-padding: 50px;
     --modal-padding-small: 40px 6vw;
     --modal-background: #fff;
@@ -21,8 +24,8 @@ Created by andreyshpigunov on 25.05.2021.
     --modal-overlay-background-color: #00000088;
 }
 
-html.modal-active body,
-html.modal-active body {
+html_modal-active body,
+html_modal-active body {
     overflow: hidden;
 }
 
@@ -40,26 +43,24 @@ html.modal-active body {
     left: 0;
     right: 0;
     padding: 0;
-    visibility: hidden;
     pointer-events: none;
-    
-    &.top {
-        z-index: 10000;
-        visibility: visible;
-        pointer-events: all;
-        
-        &.level1 { z-index: 10001; }
-        &.level2 { z-index: 10002; }
-        &.level3 { z-index: 10003; }
-        &.level4 { z-index: 10004; }
-        &.level5 { z-index: 10005; }
-        &.level6 { z-index: 10006; }
-        &.level7 { z-index: 10007; }
-        &.level8 { z-index: 10008; }
-        &.level9 { z-index: 10009; }
-        &.level10 { z-index: 10010; }
-    }
+    display: none;
 }
+.modal_ready {
+    z-index: 10000;
+    pointer-events: all;
+    display: block;
+}
+.modal_z1  { z-index: 10001 }
+.modal_z2  { z-index: 10002 }
+.modal_z3  { z-index: 10003 }
+.modal_z4  { z-index: 10004 }
+.modal_z5  { z-index: 10005 }
+.modal_z6  { z-index: 10006 }
+.modal_z7  { z-index: 10007 }
+.modal_z8  { z-index: 10008 }
+.modal_z9  { z-index: 10009 }
+.modal_z10 { z-index: 10010 }
 
 /* Overlay */
 .modal-overlay {
@@ -78,15 +79,13 @@ html.modal-active body {
     z-index: 10020;
     width: 100%;
     height: 100%;
-    padding: 60px;
+    padding: var(--modal-outer-padding);
     overflow: auto;
     overscroll-behavior: contain;
     -webkit-overflow-scrolling: touch;
     
     @media (max-width: 639px) {
-        & {
-            padding: 5px;
-        }
+        padding: var(--modal-outer-padding-small);
     }
 }
 .modal-inner {
@@ -122,11 +121,11 @@ html.modal-active body {
     right: 6px;
     width: 0;
     
-    & .modal-close {
+    .modal-close {
         display: block;
         position: sticky;
         z-index: 10040;
-        top: -54px;
+        top: -50px;
         width: var(--modal-closer-area);
         height: var(--modal-closer-area);
         margin-left: calc(-1 * var(--modal-closer-area));
@@ -166,14 +165,16 @@ html.modal-active body {
         }
     }
 }
-
-.modal.active {
-    & .modal-rail .modal-close {
+.modal_active .modal-rail {
+    
+    .modal-close {
         opacity: 1;
         
         @media (hover: hover) {
-            &:hover:before, &:hover:after,
-            &:active:before, &:active:after {
+            &:hover:before,
+            &:hover:after,
+            &:active:before,
+            &:active:after {
                 background: var(--modal-closer-color-hover);
             }
         }
@@ -185,108 +186,89 @@ html.modal-active body {
 /* Effects
    https://github.com/codrops/ModalWindowEffects */
 
+
 .modal {
     & .modal-overlay {
         will-change: opacity;
         opacity: 0;
         transition: opacity .2s ease-out;
     }
-    &.active .modal-overlay {
+    &.modal_active .modal-overlay {
         opacity: 1;
     }
 }
 
 /* Default */
-
 .modal {
     & .modal-window {
         will-change: visibility, opacity, transform;
         opacity: 0;
         transform: scale(.97);
-        transition: all .12s ease-out;
+        transform-origin: center top;
+        transition: all .2s ease-out;
     }
-    &.active .modal-window {
+    &.modal_active .modal-window {
         transform: scale(1);
         opacity: 1;
     }
 }
 
 /* Zoom in */
-
-.modal.effectIn,
-.modal.effect-in {
+.modal_effect-in {
     & .modal-window {
         transform: scale(.9);
-        transition: all .15s ease-out;
     }
-    &.active .modal-window {
+    &.modal_active .modal-window {
         transform: scale(1);
-        transition: all .2s ease-out;
     }
 }
 
 /* Zoom out */
-
-.modal.effectOut,
-.modal.effect-out {
+.modal_effect-out {
     & .modal-window {
         transform: scale(1.1);
-        transition: all .15s ease-out;
     }
-    &.active .modal-window {
+    &.modal_active .modal-window {
         transform: scale(1);
-        transition: all .2s ease-out;
     }
 }
 
 /* Slide up */
-
-.modal.effectUp,
-.modal.effect-up {
+.modal_effect-up {
     & .modal-window {
         transform: translateY(30px);
-        transition: all .2s ease-out;
     }
-    &.active .modal-window {
+    &.modal_active .modal-window {
         transform: translateY(0);
     }
 }
 
 /* Slide down */
-
-.modal.effectDown,
-.modal.effect-down {
+.modal_effect-down {
     & .modal-window {
         transform: translateY(-30px);
-        transition: all .2s ease-out;
     }
-    &.active .modal-window {
+    &.modal_active .modal-window {
         transform: translateY(0);
     }
 }
 
 /* Slide from left */
-
-.modal.effectLeft,
-.modal.effect-left {
+.modal_effect-left {
     & .modal-window {
         transform: translateX(-30px);
-        transition: all .2s ease-out;
     }
-    &.active .modal-window {
+    &.modal_active .modal-window {
         transform: translateX(0);
     }
 }
 
 /* Slide from right */
-
-.modal.effectRight,
-.modal.effect-right {
+.modal_effect-right {
     & .modal-window {
         transform: translateX(30px);
-        transition: all .2s ease-out;
     }
-    &.active .modal-window {
+    &.modal_active .modal-window {
         transform: translateX(0);
     }
 }
