--- a/src/components/x/reset.css
+++ b/src/components/x/reset.css
@@ -141,9 +141,9 @@ del, s {
 }
 img {
     display: block;
-    width: auto;
-    height: auto;
-    max-width: 100%;
+    /* width: auto; */
+    /* height: auto; */
+    /* max-width: 100%; */
 }
 ul.reset,
 ul.reset ul,
