--- a/src/components/x/sheets.css
+++ b/src/components/x/sheets.css
@@ -2,7 +2,7 @@
 sheets.css
 x
 
-Created by Andrey Shpigunov on 07.09.2024.
+Created by Andrey Shpigunov on 21.09.2024.
 ---------------------------*/
 
 
@@ -11,9 +11,9 @@ Created by Andrey Shpigunov on 07.09.2024.
 .sheets {
     
 }
-.sheets-tab {
+.sheet-tab {
     
 }
-.sheets-body:not(.active) {
+.sheet-body:not(.active) {
     display: none;
 }
