--- a/src/components/x/buttons.css
+++ b/src/components/x/buttons.css
@@ -40,7 +40,7 @@ Created by Andrey Shpigunov on 08.09.2024.
     align-items: center;
     justify-content: center;
     width: auto;
-    min-height: var(--button-height);
+    height: var(--button-height);
     padding: 0 var(--button-side-padding);
     color: var(--button-font-color);
     font-family: var(--button-font-family);
