--- a/src/components/x/scroll.css
+++ b/src/components/x/scroll.css
@@ -1,9 +1,12 @@
 /*---------------------------
-scroller.css
-auto-x
+scroll.css
+x
 
-Created by Andrey Shpigunov on 03.09.2024.
+Created by Andrey Shpigunov on 27.09.2024.
 ---------------------------*/
+
+
+/* Native CSS horizontal scroller */
 
 
 :root {
